# parasite

./: Cargo.toml  README.md  flake.nix
bak/ast/: factor.rs  mod.rs  production.rs
bak/grammar/: follow.rs  mod.rs  token_variants.rs
crates/parasite-core/: Cargo.toml
crates/parasite-core/src/: builder.rs  collections.rs  combinators.rs  error.rs  first.rs  follow.rs  grammar.rs  lib.rs  main.rs  parser.rs  pipeline.rs  table.rs
crates/parasite-core/src/ast/: iter.rs  machine.rs  mod.rs  nodes.rs  validate.rs
crates/parasite-core/src/chumsky/: combinators.rs  mod.rs
crates/parasite-core/src/grammar/: builder.rs  first.rs  follow.rs  mod.rs  parser.rs  table.rs
crates/parasite-core/src/ir/: builder.rs  machine.rs  mod.rs  validate.rs
crates/parasite-core/src/parser/: chumsky.rs  mod.rs
crates/parasite-macros/: Cargo.toml
crates/parasite-macros/src/: cst.rs  lib.rs  main.rs  parseable.rs  parser.rs  syntactical.rs
crates/parasite-macros/src/builder/: cst.rs  mod.rs
crates/parasite-macros/src/grammar/: alternation.rs  key.rs  mod.rs  populate.rs
crates/parasite-macros/src/module/: key.rs  mod.rs  populate.rs
examples/: derive.rs  grammar.rs  module.rs
src/: ast.rs  expansion.rs  first.rs  grammar.rs  lib.rs  main.rs
src/analysis/: first.rs  follow.rs  mod.rs
src/ast/: alternation.rs
src/generation/: interface.rs  mod.rs  parser.rs
src/grammar/: first.rs  follow.rs  interface.rs  mod.rs  parser.rs  token_variants.rs
