[package]
name = "parasite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
sum = "0.1.7"
logos = "0.13.0"
kinded = "0.3.0"

[lib]
proc-macro = true
