[package]
name = "parasite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parasite-core = { path = "crates/parasite-core" }
parasite-macros = { path = "crates/parasite-macros" }

[workspace]
members = ["crates/*"]
